--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.rpm filter=lfs diff=lfs merge=lfs -text
 ATGLogColorizer filter=lfs diff=lfs merge=lfs -text
 *.rar filter=lfs diff=lfs merge=lfs -text
+*.jar filter=lfs diff=lfs merge=lfs -text
